syntax = "proto3";

package fountane.auth;

service AuthService {
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc AssignRole (AssignRoleRequest) returns (AssignRoleResponse);
  rpc RevokeRole (RevokeRoleRequest) returns (RevokeRoleResponse);
  rpc GetUserRoles (GetUserRolesRequest) returns (GetUserRolesResponse);
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
  string tenant_id = 3;
}

message AuthenticateResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string tenant_id = 3;
  repeated string roles = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string tenant_id = 6;
  map<string, string> attributes = 7;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  map<string, string> attributes = 5;
}

message UpdateUserResponse {
  User user = 1;
}

message AssignRoleRequest {
  string user_id = 1;
  string role_name = 2;
  string tenant_id = 3;
}

message AssignRoleResponse {
  bool success = 1;
}

message RevokeRoleRequest {
  string user_id = 1;
  string role_name = 2;
  string tenant_id = 3;
}

message RevokeRoleResponse {
  bool success = 1;
}

message GetUserRolesRequest {
  string user_id = 1;
  string tenant_id = 2;
}

message GetUserRolesResponse {
  repeated Role roles = 1;
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string tenant_id = 6;
  bool enabled = 7;
  map<string, string> attributes = 8;
  int64 created_at = 9;
  int64 updated_at = 10;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
}